allowed no admins to view dashboard
